<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.aboulineau.commercial.Activities.UpClientActivity"
    android:id="@+id/titreCreerVille">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/nomClientField"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:hint="@string/nomHint" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/prenomClientField"
        android:layout_below="@+id/nomClientField"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:hint="@string/prenomHint" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/telClientField"
        android:layout_below="@+id/prenomClientField"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:hint="@string/telHint" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/mailClientField"
        android:layout_below="@+id/telClientField"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:hint="@string/mailHint" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/adresseClientField"
        android:layout_marginTop="50dp"
        android:hint="@string/adresseHint"
        android:layout_below="@+id/mailClientField"
        android:layout_alignRight="@+id/mailClientField"
        android:layout_alignEnd="@+id/mailClientField"
        android:layout_alignLeft="@+id/mailClientField"
        android:layout_alignStart="@+id/mailClientField" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/villeClientField"
        android:editable="false"
        android:layout_alignTop="@+id/adresseClientField"
        android:layout_toRightOf="@+id/mailClientField"
        android:layout_toEndOf="@+id/mailClientField" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/up"
        android:id="@+id/upClient"
        android:layout_above="@+id/prenomClientField"
        android:layout_toLeftOf="@+id/nomClientField"
        android:layout_toStartOf="@+id/nomClientField"
        android:layout_marginRight="150dp"
        android:layout_marginEnd="150dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titreCreerVille"
        android:id="@+id/textView2"
        android:layout_below="@+id/upClient"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/nomVilleField"
        android:layout_below="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/nomHint" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:id="@+id/codePostalVilleField"
        android:layout_below="@+id/nomVilleField"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/codeHint" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addVille"
        android:id="@+id/creerVille"
        android:layout_below="@+id/codePostalVilleField"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listVilles"
        android:layout_below="@+id/creerVille"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/villeClientField"
        android:layout_toRightOf="@+id/villeClientField"
        android:layout_toEndOf="@+id/villeClientField" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/del"
        android:id="@+id/delClient"
        android:layout_above="@+id/prenomClientField"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
