<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.aboulineau.commercial.Activities.ViewAppelActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Client"
        android:id="@+id/titreViewAppel"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/dateField"
        android:layout_below="@+id/titre"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:hint="@string/dateHint"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:id="@+id/heureField"
        android:layout_below="@+id/dateField"
        android:layout_alignLeft="@+id/dateField"
        android:layout_alignStart="@+id/dateField"
        android:layout_marginTop="50dp"
        android:hint="@string/heureHint"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/notesField"
        android:layout_below="@+id/heureField"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:hint="@string/notesHint"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/avisField"
        android:layout_below="@+id/notesField"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:hint="@string/avisHint"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/up"
        android:id="@+id/button2"
        android:layout_above="@+id/btnModifyClient"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/del"
        android:id="@+id/btnModifyClient"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp" />

</RelativeLayout>
