<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.aboulineau.commercial.Activities.AddRdvActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Client"
        android:id="@+id/titreAddRdv"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/dateField"
        android:hint="@string/dateHint"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/titreAddRdv"
        android:layout_alignLeft="@+id/avisField"
        android:layout_alignStart="@+id/avisField" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:id="@+id/heureField"
        android:layout_below="@+id/dateField"
        android:layout_alignLeft="@+id/dateField"
        android:layout_alignStart="@+id/dateField"
        android:layout_marginTop="50dp"
        android:hint="@string/heureHint"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/notesField"
        android:layout_below="@+id/heureField"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:hint="@string/notesHint"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/avisField"
        android:layout_below="@+id/notesField"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:hint="@string/avisHint"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:id="@+id/creerRdv"
        android:layout_below="@+id/avisField"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />
        android:layout_marginBottom="50dp" />

</RelativeLayout>
